--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ h2 {
   font-weight: bold;
   font-size: 1.3rem;
   margin-bottom: 1rem;
+  color: #0f4c5c;
 }
 
 h3 {
@@ -225,4 +226,25 @@ a:hover {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: .9rem;
+}
+
+#amount-input {
+  flex: 1;
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 10px;
+}
+
+#conversion-direction {
+  flex: 1;
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 10px;
+}
+
+
+#conversion-main {
+  background-color: rgba(255, 255, 255, 0.5); /* White background with 50% transparency */
+  padding: 16px;
+  border-radius: 10px;
 }
